force-app/main/default/objects/Order/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <formula>Opportunity.Account_Manager__r.FirstName + &#39; &#39;+ Opportunity.Account_Manager__r.LastName</formula>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>