force-app/main/default/objects/Order/fields/AdditionalComments__c.field-meta.xml
<CustomField>
    <fullName>AdditionalComments__c</fullName>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>