force-app/main/default/objects/Order/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>This field is for added information needed on promotional materials; such as, how to schedule, appointment contact details, drive specific promotions, additional site directions. Do not duplicate details for online scheduling or Drive Keyword.</inlineHelpText>
    <label>Publicity Comment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-800-Red Cross Contact</fullName>
            </value>
            <value>
                <fullName>Print Appointment Contact</fullName>
            </value>
            <value>
                <fullName>Right Type Mix</fullName>
            </value>
            <value>
                <fullName>RapidPass</fullName>
            </value>
            <value>
                <fullName>Local Promotion</fullName>
            </value>
            <value>
                <fullName>Local Chance to Win</fullName>
            </value>
            <value>
                <fullName>Local Refreshments</fullName>
            </value>
            <value>
                <fullName>Feeder Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>