force-app/main/default/objects/Order/fields/DriveKeyword__c.field-meta.xml
<CustomField>
    <fullName>DriveKeyword__c</fullName>
    <formula>Opportunity.Drive_Keyword__c</formula>
    <label>Drive Keyword</label>
    <type>Text</type>
</CustomField>