force-app/main/default/objects/Order/fields/Local_Offerings__c.field-meta.xml
<CustomField>
    <fullName>Local_Offerings__c</fullName>
    <label>Local Offerings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Local Chance to Win</fullName>
            </value>
            <value>
                <fullName>Local Promotion</fullName>
            </value>
            <value>
                <fullName>Local Refreshments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>