force-app/main/default/objects/Order/fields/Material_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Material_Recipient__c</fullName>
    <label>Material Recipient</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Staging Office</fullName>
            </value>
            <value>
                <fullName>Account Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>