force-app/main/default/objects/Order/fields/Material_Recipient_Default__c.field-meta.xml
<CustomField>
    <fullName>Material_Recipient_Default__c</fullName>
    <label>Material Recipient Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>