force-app/main/default/objects/Order/fields/Publicity_Approved__c.field-meta.xml
<CustomField>
    <fullName>Publicity_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publicity Approved &amp; Submitted</label>
    <type>Checkbox</type>
</CustomField>