force-app/main/default/objects/Order/fields/Publicity_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Publicity_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publicity Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>