force-app/main/default/objects/Order/fields/Publicity_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Publicity_Approved_Date__c</fullName>
    <label>Publicity Approved Date</label>
    <type>Date</type>
</CustomField>