force-app/main/default/objects/Order/fields/Publicity_Comment__c.field-meta.xml
<CustomField>
    <fullName>Publicity_Comment__c</fullName>
    <inlineHelpText>This field is for added information needed on promotional materials; such as, how to schedule, appointment contact details, drive specific promotions, additional site directions. Do not duplicate details for online scheduling or Drive Keyword.</inlineHelpText>
    <label>Publicity Comment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1-800-Red Cross Contact</fullName>
            </value>
            <value>
                <fullName>Feeder Account</fullName>
                <isActive>false</isActive>
                <label>Feeder Account</label>
            </value>
            <value>
                <fullName>Print Appointment Contact</fullName>
            </value>
            <value>
                <fullName>RapidPass</fullName>
            </value>
            <value>
                <fullName>Right Type Mix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>