force-app/main/default/objects/Order/fields/Publicity_Package__c.field-meta.xml
<CustomField>
    <fullName>Publicity_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publicity Package</label>
    <referenceTo>Publicity_Package__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>