force-app/main/default/objects/Order/fields/Publicity_Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Publicity_Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publicity Submitted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>