force-app/main/default/objects/Order/fields/Publicity_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Publicity_Submitted_Date__c</fullName>
    <label>Publicity Submitted Date</label>
    <type>Date</type>
</CustomField>