force-app/main/default/objects/Order/validationRules/Publicity_approved_submitted_unchecked.validationRule-meta.xml
<ValidationRule>
    <fullName>Publicity_approved_submitted_unchecked</fullName>
    <active>true</active>
    <description>Prevents Publicity Approved and Publicity Submitted fields being checked when a new Order is created.</description>
    <errorConditionFormula>AND(ISNEW(), OR(
AND(Publicity_Approved__c ,NOT(ISCHANGED(Publicity_Submitted__c))
),AND(Publicity_Submitted__c ,NOT(ISCHANGED(Publicity_Approved__c))
)
))</errorConditionFormula>
    <errorMessage>Publicity Approved And Submitted can&apos;t be checked while creating new order</errorMessage>
</ValidationRule>