force-app/main/default/objects/Order/listViews/All_Orders_Overdue.listView-meta.xml
<ListView>
    <fullName>All_Orders_Overdue</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Drive_Date__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Order_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Publicity_Approved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Drive_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Order_Due_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>All Orders_Overdue</label>
</ListView>