force-app/main/default/objects/Order/listViews/AllOrders.listView-meta.xml
<ListView>
    <fullName>AllOrders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Drive_Date__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Budget__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>Publicity_Approved__c</columns>
    <columns>Publicity_Approved_By__c</columns>
    <columns>Publicity_Approved_Date__c</columns>
    <columns>Publicity_Submitted__c</columns>
    <columns>Publicity_Submitted_By__c</columns>
    <columns>Publicity_Submitted_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Publicity_Submitted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Publicity_Approved__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Orders</label>
</ListView>