force-app/main/default/objects/Order/listViews/Copy_of_My_Orders.listView-meta.xml
<ListView>
    <fullName>Copy_of_My_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>Drive_Date__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Order_Due_Date__c</columns>
    <columns>Budget__c</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>Publicity_Approved__c</columns>
    <columns>Publicity_Approved_By__c</columns>
    <columns>Publicity_Approved_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Publicity_Approved__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Drive_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Ready for Approval</label>
</ListView>